tests/baselines/reference/parserIndexMemberDeclaration7.errors.txt
parserIndexMemberDeclaration7.ts(2,4): error TS1071: 'public' modifier cannot appear on an index signature.


==== parserIndexMemberDeclaration7.ts (1 errors) ====
    class C {
       public [x: string]: string;
       ~~~~~~
!!! error TS1071: 'public' modifier cannot appear on an index signature.
    }